--- a/index.html
+++ b/index.html
@@ -222,6 +222,18 @@
                     </figure>
 
                 </section>
+<!--Octavo Testimonio-->
+                <section class="testimony__body" data-id="8">
+                    <div class="testimony__texts">
+                        <h2 class="subtitle">Saludo especial. <br>Taylor Swift, <span class="testimony__course">mentora de Ale.</span></h2>
+                        <p class="testimony__review">Querida Ale, <br>
+                            Sé que estás atravesando un momento difícil, pero quiero que sepas que eres más fuerte de lo que piensas. Las tormentas emocionales pueden ser intensas, pero también son temporales. Has demostrado una fuerza increíble y estoy aquí para apoyarte en cada paso hacia la luz al final del túnel. Recuerda, cada capítulo de tu vida es parte de tu historia, y aunque este pueda ser desafiante, estoy segura de que vendrán páginas llenas de felicidad y amor. Mantén tu luz interior brillando, porque eres una persona increíblemente valiosa. <br>Con todo mi cariño y apoyo, Taylor Swift.</p>
+                    </div>
+                    <figure class="testimony__picture">
+                        <img src="./Imagenes/taylor swift.jpeg" alt="Taylor_swift" class="testimony__img">
+                    </figure>
+
+                </section>
             
                 <img src="https://img.icons8.com/windows/32/circled-chevron-right.png" alt="circled-chevron-right" class="testimony__arrow" id="next"/>
             </div>
